--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
   font-family: 'General Sans', sans-serif;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 @layer utilities {
   .c-space {
     @apply sm:px-10 px-5;
